--- a/env.yml
+++ b/env.yml
@@ -1,60 +1,114 @@
 name: snow-classifier
 channels:
+  - conda-forge
   - defaults
 dependencies:
+  - appdirs=1.4.4=pyh9f0ad1d_0
   - autopep8=1.5.7=pyhd3eb1b0_0
   - blas=1.0=mkl
-  - ca-certificates=2021.5.25=haa95532_1
-  - certifi=2021.5.30=py37haa95532_0
-  - cycler=0.10.0=py37_0
-  - freetype=2.10.4=hd328e21_0
+  - blosc=1.21.0=h0e60522_0
+  - brotli=1.0.9=h0e60522_4
+  - brotlipy=0.7.0=py37hcc03f2d_1001
+  - bzip2=1.0.8=h8ffe710_4
+  - ca-certificates=2021.5.30=h5b45459_0
+  - certifi=2021.5.30=py37h03978a9_0
+  - cffi=1.14.5=py37hd8e9650_0
+  - chardet=4.0.0=py37h03978a9_1
+  - charls=2.2.0=h39d44d4_0
+  - cloudpickle=1.6.0=py_0
+  - cryptography=3.4.7=py37h20c650d_0
+  - cycler=0.10.0=py_2
+  - cytoolz=0.11.0=py37hcc03f2d_3
+  - dask-core=2021.6.0=pyhd8ed1ab_0
+  - decorator=5.0.9=pyhd8ed1ab_0
+  - freetype=2.10.4=h546665d_1
+  - fsspec=2021.5.0=pyhd8ed1ab_0
+  - giflib=5.2.1=h8d14728_2
   - hdf5=1.8.20=hac2f561_1
   - icc_rt=2019.0.0=h0cc432a_1
-  - icu=58.2=ha925a31_3
-  - intel-openmp=2021.2.0=haa95532_616
-  - joblib=1.0.1=pyhd3eb1b0_0
-  - jpeg=9b=hb83a4c4_2
-  - kiwisolver=1.3.1=py37hd77b12b_0
+  - icu=68.1=h0e60522_0
+  - idna=2.10=pyh9f0ad1d_0
+  - imagecodecs=2021.3.31=py37h3a72717_1
+  - imageio=2.9.0=py_0
+  - intel-openmp=2021.2.0=h57928b3_616
+  - jbig=2.1=h8d14728_2003
+  - joblib=1.0.1=pyhd8ed1ab_0
+  - jpeg=9d=h8ffe710_0
+  - jxrlib=1.1=h8ffe710_2
+  - kiwisolver=1.3.1=py37h8c56517_1
+  - lcms2=2.12=h2a16943_0
+  - lerc=2.2.1=h0e60522_0
+  - libaec=1.0.4=h39d44d4_1
+  - libblas=3.9.0=9_mkl
+  - libcblas=3.9.0=9_mkl
+  - libclang=11.1.0=default_h5c34c98_1
+  - libdeflate=1.7=h8ffe710_5
+  - liblapack=3.9.0=9_mkl
   - libopencv=3.4.2=h20b85fd_0
-  - libpng=1.6.37=h2a8f88b_0
-  - libtiff=4.2.0=hd0e1b90_0
-  - lz4-c=1.9.3=h2bbff1b_0
+  - libpng=1.6.37=h1d00b33_2
+  - libtiff=4.3.0=h0c97f57_1
+  - libwebp-base=1.2.0=h8ffe710_2
+  - libzopfli=1.0.3=h0e60522_0
+  - locket=0.2.0=py_2
+  - lz4-c=1.9.3=h8ffe710_0
   - matplotlib=3.3.4=py37haa95532_0
-  - matplotlib-base=3.3.4=py37h49ac443_0
-  - mkl=2021.2.0=haa95532_296
-  - mkl-service=2.3.0=py37h2bbff1b_1
-  - mkl_fft=1.3.0=py37h277e83a_2
-  - mkl_random=1.2.1=py37hf11a4ad_2
-  - numpy=1.20.2=py37ha4e8547_0
-  - numpy-base=1.20.2=py37hc2deb75_0
-  - olefile=0.46=py37_0
+  - matplotlib-base=3.3.4=py37h3379fd5_0
+  - mkl=2021.2.0=hb70f87d_389
+  - mkl-service=2.4.0=py37hcc03f2d_0
+  - networkx=2.3=py_0
+  - numpy=1.20.3=py37hcbcd69c_1
+  - olefile=0.46=pyh9f0ad1d_1
   - opencv=3.4.2=py37h40b0b35_0
-  - openssl=1.1.1k=h2bbff1b_0
-  - pillow=8.2.0=py37h4fa10fc_0
-  - pip=21.1.1=py37haa95532_0
+  - openjpeg=2.4.0=hb211442_1
+  - openssl=1.1.1k=h8ffe710_0
+  - packaging=20.9=pyh44b312d_0
+  - pandas=1.2.4=py37hd77b12b_0
+  - partd=1.2.0=pyhd8ed1ab_0
+  - pillow=8.2.0=py37h96663a1_1
+  - pip=21.1.2=pyhd8ed1ab_0
+  - pooch=1.3.0=pyhd8ed1ab_0
   - py-opencv=3.4.2=py37hc319ecb_0
-  - pycodestyle=2.7.0=pyhd3eb1b0_0
-  - pyparsing=2.4.7=pyhd3eb1b0_0
-  - pyqt=5.9.2=py37h6538335_2
+  - pycodestyle=2.7.0=pyhd8ed1ab_0
+  - pycparser=2.20=pyh9f0ad1d_2
+  - pyopenssl=20.0.1=pyhd8ed1ab_0
+  - pyparsing=2.4.7=pyh9f0ad1d_0
+  - pyqt=5.12.3=py37h03978a9_7
+  - pyqt-impl=5.12.3=py37hf2a7229_7
+  - pyqt5-sip=4.19.18=py37hf2a7229_7
+  - pyqtchart=5.12=py37hf2a7229_7
+  - pyqtwebengine=5.12.1=py37hf2a7229_7
+  - pysocks=1.7.1=py37h03978a9_3
   - python=3.7.10=h6244533_0
-  - python-dateutil=2.8.1=pyhd3eb1b0_0
-  - qt=5.9.7=vc14h73c81de_0
+  - python-dateutil=2.8.1=py_0
+  - python_abi=3.7=1_cp37m
+  - pytz=2021.1=pyhd8ed1ab_0
+  - pywavelets=1.1.1=py37hda49f71_3
+  - pyyaml=5.4.1=py37hcc03f2d_0
+  - qt=5.12.9=h5909a2a_4
+  - requests=2.25.1=pyhd3deb0d_0
+  - scikit-image=0.18.1=py37h08fd248_0
   - scikit-learn=0.24.2=py37hf11a4ad_0
   - scipy=1.6.2=py37h66253e8_1
-  - setuptools=52.0.0=py37haa95532_0
-  - sip=4.19.8=py37h6538335_0
-  - six=1.15.0=py37haa95532_0
-  - sqlite=3.35.4=h2bbff1b_0
+  - setuptools=49.6.0=py37h03978a9_3
+  - six=1.16.0=pyh6c4a22f_0
+  - snappy=1.1.8=ha925a31_3
+  - sqlite=3.35.5=h8ffe710_0
+  - tbb=2021.2.0=h2d74725_0
   - threadpoolctl=2.1.0=pyh5ca1d4c_0
-  - tk=8.6.10=he774522_0
-  - toml=0.10.2=pyhd3eb1b0_0
-  - tornado=6.1=py37h2bbff1b_0
-  - tzdata=2020f=h52ac0ba_0
-  - vc=14.2=h21ff451_1
-  - vs2015_runtime=14.27.29016=h5e58377_2
-  - wheel=0.36.2=pyhd3eb1b0_0
-  - wincertstore=0.2=py37_0
-  - xz=5.2.5=h62dcd97_0
-  - zlib=1.2.11=h62dcd97_4
-  - zstd=1.4.9=h19a0ad4_0
+  - tifffile=2021.4.8=pyhd8ed1ab_0
+  - tk=8.6.10=h8ffe710_1
+  - toml=0.10.2=pyhd8ed1ab_0
+  - toolz=0.11.1=py_0
+  - tornado=6.1=py37hcc03f2d_1
+  - urllib3=1.26.5=pyhd8ed1ab_0
+  - vc=14.2=hb210afc_4
+  - vs2015_runtime=14.28.29325=h5e1d092_4
+  - wheel=0.36.2=pyhd3deb0d_0
+  - win_inet_pton=1.1.0=py37h03978a9_2
+  - wincertstore=0.2=py37h03978a9_1006
+  - xz=5.2.5=h62dcd97_1
+  - yaml=0.2.5=he774522_0
+  - zfp=0.5.5=h0e60522_5
+  - zlib=1.2.11=h62dcd97_1010
+  - zstd=1.5.0=h6255e5f_0
 prefix: C:\Users\jewik\anaconda3\envs\snow-classifier
