--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,7 @@ classifiers = [
     "Operating System :: OS Independent",
 ]
 dependencies = [        
-    "lightning>=1.4.0", 
+    "pytorch_lightning>=1.4.0", 
     "matplotlib>=3.4.2",
     "numpy>=1.21.1",
     "pandas>=1.3.1",
