--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,7 +37,8 @@ dependencies = [
     "pandas>=1.3.1",
     "pillow>=8.3.1",
     "timm>=0.4.12",
-    "torchvision>=0.8.1"
+    "torchvision>=0.8.1",
+    "tensorboard"
 ]
 
 [project.optional-dependencies]
