--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,19 +31,20 @@ classifiers = [
     "Operating System :: OS Independent",
 ]
 dependencies = [        
-    "pytorch_lightning>=1.4.0", 
-    "matplotlib>=3.4.2",
-    "numpy>=1.21.1",
-    "pandas>=1.3.1",
-    "pillow>=8.3.1",
-    "timm>=0.4.12",
-    "torchvision>=0.8.1",
+    "pytorch_lightning>=1.4.0, <=1.9.5", 
+    "numpy",
+    "pandas>=1.3.1, <=1.3.5",
+    "pillow>=8.3.1, <=9.5.0",
+    "rich",
+    "torchmetrics>=0.10.0, <=0.11.4",
+    "torchvision>=0.8.1, <=0.14.1",
     "tensorboard"
 ]
 
 [project.optional-dependencies]
 jupyter = [
-    "jupyter==1.0.0"
+    "jupyter",
+    "jupyterlab"
 ]
 dev = [
     "black>=23.1.0",    
